extensions/html-sharp/tests/fixtures/positive/hover-regular.cs
// Hover fixtures: marker-triggered and method-triggered regular strings.
// Used by tests/unit/hover-provider.test.ts (TH-001, TH-002, TH-004).
class HoverRegular
{
    string a = /*lang=html*/ "<p>Hello</p>";
    string b = /*lang=html*/ "<div>World</div>";
    string c = Html("<article>Content</article>");
}
